// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`props should render (Flex) gap 1`] = `
Snapshot Diff:
- Received styles
+ Base styles

@@ -1,8 +1,8 @@
  Array [
    Object {
-     "--wp-g2-flex-gap": "calc(var(--wp-g2-grid-base) * 1)",
+     "--wp-g2-flex-gap": "calc(var(--wp-g2-grid-base) * 2)",
      "-moz-appearance": "none",
      "-moz-osx-font-smoothing": "grayscale",
      "-moz-user-select": "none",
      "-ms-flex-align": "center",
      "-ms-flex-direction": "row",
`;

exports[`props should render as link (href) 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -1,15 +1,14 @@
- <a
+ <button
    aria-busy="false"
    class="components-flex wp-components-flex ic-17cs4ki components-base-button wp-components-base-button components-button wp-components-button ic-i0z4gr ic-1d6ec17 ic-192yz5d css-pr721c"
    data-active="false"
    data-destructive="false"
    data-focused="false"
    data-g2-c16t="true"
    data-g2-component="Button"
    data-icon="false"
-   href="#"
  >
    <span
      class="components-flex-item wp-components-flex-item ic-1p3tlc8 ic-192yz5d css-1493c17"
      data-g2-c16t="true"
      data-g2-component="ButtonContent"
@@ -20,6 +19,6 @@
      aria-hidden="true"
      class="components-elevation wp-components-elevation ic-i1zzlu ic-192yz5d css-8abvx7"
      data-g2-c16t="true"
      data-g2-component="ButtonElevation"
    />
- </a>
+ </button>
`;

exports[`props should render correctly 1`] = `
.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2 {
  box-sizing: border-box;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  font-family: Inter,system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",sans-serif;
  font-family: var(--wp-g2-font-family);
  font-size: 13px;
  font-size: var(--wp-g2-font-size);
  font-weight: normal;
  font-weight: var(--wp-g2-font-weight);
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  --wp-g2-flex-gap: calc(4px * 2);
  --wp-g2-flex-gap: calc(var(--wp-g2-grid-base) * 2);
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: transparent;
  border-color: transparent;
  border-radius: 2px;
  border-radius: var(--wp-g2-control-border-radius);
  border-style: solid;
  border-width: 1px;
  box-shadow: 0 0 0 0.5px transparent;
  box-shadow: 0 0 0 var(--wp-g2-control-box-shadow-focus-size) transparent;
  box-sizing: border-box;
  color: #1e1e1e;
  color: var(--wp-g2-color-text);
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 13px;
  font-size: var(--wp-g2-font-size);
  height: auto;
  line-height: 1;
  min-height: 30px;
  min-height: var(--wp-g2-control-height);
  outline: none;
  padding-bottom: calc(4px * 1);
  padding-bottom: calc(var(--wp-g2-grid-base) * 1);
  padding-left: 12px;
  padding-left: var(--wp-g2-control-padding-x);
  padding-right: 12px;
  padding-right: var(--wp-g2-control-padding-x);
  padding-top: calc(4px * 1);
  padding-top: calc(var(--wp-g2-grid-base) * 1);
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  touch-action: manipulation;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: auto;
  text-align: center;
  color: #007cba;
  color: var(--wp-g2-button-text-color);
  font-weight: 600;
  padding-left: calc(12px * calc(4/3));
  padding-left: var(--wp-g2-button-padding-x);
  padding-right: calc(12px * calc(4/3));
  padding-right: var(--wp-g2-button-padding-x);
  background-color: transparent;
  background-color: var(--wp-g2-button-secondary-color);
  border-color: #007cba;
  border-color: var(--wp-g2-button-secondary-border-color);
  color: #007cba;
  color: var(--wp-g2-button-secondary-text-color);
}

@media (prefers-reduced-motion) {
  .emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2 {
    -webkit-transition: none !important;
    transition: none !important;
  }
}

[data-system-ui-reduced-motion-mode="true"] .emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2 {
  -webkit-transition: none !important;
  transition: none !important;
}

.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2 > * + *:not(marquee) {
  margin-left: calc(4px * 2);
  margin-left: calc(var(--wp-g2-grid-base) * 2);
}

.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2 > * {
  min-width: 0;
}

.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2:hover,
.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2:active,
.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2:focus {
  -webkit-transition: all 200ms cubic-bezier( 0.12,0.8,0.32,1 );
  -webkit-transition: all var(--wp-g2-transition-duration) cubic-bezier( 0.12,0.8,0.32,1 );
  transition: all 200ms cubic-bezier( 0.12,0.8,0.32,1 );
  transition: all var(--wp-g2-transition-duration) cubic-bezier( 0.12,0.8,0.32,1 );
}

.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2[disabled]:not( [aria-busy='true'] ),
.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2[aria-disabled='true']:not( [aria-busy='true'] ) {
  opacity: 0.5;
  cursor: auto;
}

.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2:focus {
  box-shadow: 0 0 0 0.5px #007cba;
  box-shadow: var(--wp-g2-control-box-shadow-focus);
}

.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2[data-destructive='true']:focus {
  box-shadow: 0 0 0 0.5px #D94F4F;
  box-shadow: var(--wp-g2-control-destructive-box-shadow-focus);
}

.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2[data-icon='true'] {
  min-width: 30px;
  min-width: var(--wp-g2-control-height);
}

.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2 svg {
  display: block;
}

.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2:active {
  color: #007cba;
  color: var(--wp-g2-button-text-color-active);
}

.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2:hover {
  background-color: transparent;
  background-color: var(--wp-g2-button-secondary-color-hover);
  border-color: #007cba;
  border-color: var(--wp-g2-button-secondary-border-color-hover);
}

.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2:focus,
.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2[data-focused='true'] {
  background-color: transparent;
  background-color: var(--wp-g2-button-secondary-color-focus);
  border-color: #007cba;
  border-color: var(--wp-g2-button-secondary-border-color-focus);
  color: #007cba;
  color: var(--wp-g2-button-secondary-text-color-focus);
}

.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2:active {
  background-color: rgba(0, 0, 0, 0.05);
  background-color: var(--wp-g2-button-secondary-color-active);
  border-color: #007cba;
  border-color: var(--wp-g2-button-secondary-border-color-active);
  color: #007cba;
  color: var(--wp-g2-button-secondary-text-color-active);
}

.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2[data-destructive='true'] {
  border-color: #D94F4F;
  border-color: var(--wp-g2-color-destructive);
  color: #D94F4F;
  color: var(--wp-g2-color-destructive);
}

.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2[data-destructive='true']:hover,
.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2[data-destructive='true']:active,
.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2[data-destructive='true']:focus,
.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2[data-destructive='true'][data-focused='true'] {
  border-color: #D94F4F;
  border-color: var(--wp-g2-color-destructive);
  color: #D94F4F;
  color: var(--wp-g2-color-destructive);
}

.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2[data-destructive='true']:active {
  color: #1e1e1e;
  color: var(--wp-g2-color-text);
}

.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0 {
  box-sizing: border-box;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  font-family: Inter,system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",sans-serif;
  font-family: var(--wp-g2-font-family);
  font-size: 13px;
  font-size: var(--wp-g2-font-size);
  font-weight: normal;
  font-weight: var(--wp-g2-font-weight);
  margin: 0;
  display: block;
  max-height: 100%;
  max-width: 100%;
  min-height: 0;
  min-width: 0;
  display: var(--wp-g2-flex-item-display);
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-size: 13px;
  font-size: var(--wp-g2-font-size);
  opacity: 1;
  white-space: nowrap;
}

@media (prefers-reduced-motion) {
  .emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0 {
    -webkit-transition: none !important;
    transition: none !important;
  }
}

[data-system-ui-reduced-motion-mode="true"] .emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0 {
  -webkit-transition: none !important;
  transition: none !important;
}

.emotion-1.emotion-1.emotion-1.emotion-1.emotion-1.emotion-1.emotion-1 {
  box-sizing: border-box;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  font-family: Inter,system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",sans-serif;
  font-family: var(--wp-g2-font-family);
  font-size: 13px;
  font-size: var(--wp-g2-font-size);
  font-weight: normal;
  font-weight: var(--wp-g2-font-weight);
  margin: 0;
  background: transparent;
  display: block;
  margin: 0 !important;
  pointer-events: none;
  position: absolute;
  will-change: box-shadow;
  border-radius: inherit;
  bottom: -1px;
  box-shadow: 0 0px 0px 0 rgba(0 ,0,0,0);
  opacity: 1;
  opacity: var(--wp-g2-elevation-intensity);
  left: -1px;
  right: -1px;
  top: -1px;
  -webkit-transition: box-shadow 200ms cubic-bezier(0.08, 0.52, 0.52, 1);
  -webkit-transition: box-shadow var(--wp-g2-transition-duration) var(--wp-g2-transition-timing-function);
  transition: box-shadow 200ms cubic-bezier(0.08, 0.52, 0.52, 1);
  transition: box-shadow var(--wp-g2-transition-duration) var(--wp-g2-transition-timing-function);
}

@media (prefers-reduced-motion) {
  .emotion-1.emotion-1.emotion-1.emotion-1.emotion-1.emotion-1.emotion-1 {
    -webkit-transition: none !important;
    transition: none !important;
  }
}

[data-system-ui-reduced-motion-mode="true"] .emotion-1.emotion-1.emotion-1.emotion-1.emotion-1.emotion-1.emotion-1 {
  -webkit-transition: none !important;
  transition: none !important;
}

<button
  aria-busy="false"
  class="components-flex wp-components-flex ic-17cs4ki components-base-button wp-components-base-button components-button wp-components-button ic-i0z4gr ic-1d6ec17 ic-192yz5d emotion-2"
  data-active="false"
  data-destructive="false"
  data-focused="false"
  data-g2-c16t="true"
  data-g2-component="Button"
  data-icon="false"
>
  <span
    class="components-flex-item wp-components-flex-item ic-1p3tlc8 ic-192yz5d emotion-0"
    data-g2-c16t="true"
    data-g2-component="ButtonContent"
  >
    Lorem
  </span>
  <span
    aria-hidden="true"
    class="components-elevation wp-components-elevation ic-i1zzlu ic-192yz5d emotion-1"
    data-g2-c16t="true"
    data-g2-component="ButtonElevation"
  />
</button>
`;

exports[`props should render describedBy 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -1,8 +1,7 @@
  <button
    aria-busy="false"
-   aria-describedby="1"
    class="components-flex wp-components-flex ic-17cs4ki components-base-button wp-components-base-button components-button wp-components-button ic-i0z4gr ic-1d6ec17 ic-192yz5d css-pr721c"
    data-active="false"
    data-destructive="false"
    data-focused="false"
    data-g2-c16t="true"
@@ -12,11 +11,11 @@
    <span
      class="components-flex-item wp-components-flex-item ic-1p3tlc8 ic-192yz5d css-1493c17"
      data-g2-c16t="true"
      data-g2-component="ButtonContent"
    >
-     WordPress.org
+     Lorem
    </span>
    <span
      aria-hidden="true"
      class="components-elevation wp-components-elevation ic-i1zzlu ic-192yz5d css-8abvx7"
      data-g2-c16t="true"
`;

exports[`props should render disabled 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -1,8 +1,7 @@
  <button
    aria-busy="false"
-   aria-disabled="true"
    class="components-flex wp-components-flex ic-17cs4ki components-base-button wp-components-base-button components-button wp-components-button ic-i0z4gr ic-1d6ec17 ic-192yz5d css-pr721c"
    data-active="false"
    data-destructive="false"
    data-focused="false"
    data-g2-c16t="true"
`;

exports[`props should render elevation 1`] = `
Snapshot Diff:
Compared values have no visual difference.
`;

exports[`props should render hasCaret 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -14,29 +14,10 @@
      data-g2-component="ButtonContent"
    >
      Lorem
    </span>
    <span
-     class="components-flex-item wp-components-flex-item ic-1p3tlc8 ic-192yz5d css-1wwr4qj"
-     data-g2-c16t="true"
-     data-g2-component="ButtonCaret"
-   >
-     <svg
-       aria-hidden="true"
-       focusable="false"
-       height="16"
-       role="img"
-       viewBox="0 0 24 24"
-       width="16"
-       xmlns="http://www.w3.org/2000/svg"
-     >
-       <path
-         d="M17.5 11.6L12 16l-5.5-4.4.9-1.2L12 14l4.5-3.6 1 1.2z"
-       />
-     </svg>
-   </span>
-   <span
      aria-hidden="true"
      class="components-elevation wp-components-elevation ic-i1zzlu ic-192yz5d css-8abvx7"
      data-g2-c16t="true"
      data-g2-component="ButtonElevation"
    />
`;

exports[`props should render icon 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -4,19 +4,12 @@
    data-active="false"
    data-destructive="false"
    data-focused="false"
    data-g2-c16t="true"
    data-g2-component="Button"
-   data-icon="true"
- >
-   <span
-     class="components-flex-item wp-components-flex-item ic-1p3tlc8 ic-192yz5d css-1dor7w6"
-     data-g2-c16t="true"
-     data-g2-component="ButtonIcon"
+   data-icon="false"
  >
-     <svg />
-   </span>
    <span
      class="components-flex-item wp-components-flex-item ic-1p3tlc8 ic-192yz5d css-1493c17"
      data-g2-c16t="true"
      data-g2-component="ButtonContent"
    >
`;

exports[`props should render isControl 1`] = `
Snapshot Diff:
- Received styles
+ Base styles

@@ -17,19 +17,18 @@
      "-webkit-justify-content": "center",
      "-webkit-text-decoration": "none",
      "-webkit-user-select": "none",
      "align-items": "center",
      "appearance": "none",
-     "background-color": "var(--wp-g2-control-background-color)",
-     "border": "1px solid",
-     "border-color": "var(--wp-g2-control-border-color)",
+     "background-color": "var(--wp-g2-button-secondary-color)",
+     "border-color": "var(--wp-g2-button-secondary-border-color)",
      "border-radius": "var(--wp-g2-control-border-radius)",
      "border-style": "solid",
      "border-width": "1px",
      "box-shadow": "0 0 0 var(--wp-g2-control-box-shadow-focus-size) transparent",
      "box-sizing": "border-box",
-     "color": "var(--wp-g2-color-text)",
+     "color": "var(--wp-g2-button-secondary-text-color)",
      "cursor": "pointer",
      "display": "inline-flex",
      "flex-direction": "row",
      "font-family": "var(--wp-g2-font-family)",
      "font-size": "var(--wp-g2-font-size)",
`;

exports[`props should render isDestructive 1`] = `
Snapshot Diff:
- Received styles
+ Base styles

@@ -48,10 +48,6 @@
      "text-decoration": "none",
      "touch-action": "manipulation",
      "user-select": "none",
      "width": "auto",
    },
-   Object {
-     "border-color": "var(--wp-g2-color-destructive)",
-     "color": "var(--wp-g2-color-destructive)",
-   },
  ]
`;

exports[`props should render isLoading 1`] = `
Snapshot Diff:
Compared values have no visual difference.
`;

exports[`props should render isNarrow 1`] = `
Snapshot Diff:
Compared values have no visual difference.
`;

exports[`props should render isRounded 1`] = `
Snapshot Diff:
- Received styles
+ Base styles

@@ -19,11 +19,11 @@
      "-webkit-user-select": "none",
      "align-items": "center",
      "appearance": "none",
      "background-color": "var(--wp-g2-button-secondary-color)",
      "border-color": "var(--wp-g2-button-secondary-border-color)",
-     "border-radius": "99999px",
+     "border-radius": "var(--wp-g2-control-border-radius)",
      "border-style": "solid",
      "border-width": "1px",
      "box-shadow": "0 0 0 var(--wp-g2-control-box-shadow-focus-size) transparent",
      "box-sizing": "border-box",
      "color": "var(--wp-g2-button-secondary-text-color)",
`;

exports[`props should render isSubtle 1`] = `
Snapshot Diff:
- Received styles
+ Base styles

@@ -18,17 +18,17 @@
      "-webkit-text-decoration": "none",
      "-webkit-user-select": "none",
      "align-items": "center",
      "appearance": "none",
      "background-color": "var(--wp-g2-button-secondary-color)",
-     "border-color": "var(--wp-g2-control-border-color-subtle)",
+     "border-color": "var(--wp-g2-button-secondary-border-color)",
      "border-radius": "var(--wp-g2-control-border-radius)",
      "border-style": "solid",
      "border-width": "1px",
      "box-shadow": "0 0 0 var(--wp-g2-control-box-shadow-focus-size) transparent",
      "box-sizing": "border-box",
-     "color": "var(--wp-g2-color-text)",
+     "color": "var(--wp-g2-button-secondary-text-color)",
      "cursor": "pointer",
      "display": "inline-flex",
      "flex-direction": "row",
      "font-family": "var(--wp-g2-font-family)",
      "font-size": "var(--wp-g2-font-size)",
`;

exports[`props should render prefix 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -7,19 +7,10 @@
    data-g2-c16t="true"
    data-g2-component="Button"
    data-icon="false"
  >
    <span
-     class="components-flex-item wp-components-flex-item ic-1p3tlc8 ic-192yz5d css-1dor7w6"
-     data-g2-c16t="true"
-     data-g2-component="ButtonPrefix"
-   >
-     <span>
-       Prefix
-     </span>
-   </span>
-   <span
      class="components-flex-item wp-components-flex-item ic-1p3tlc8 ic-192yz5d css-1493c17"
      data-g2-c16t="true"
      data-g2-component="ButtonContent"
    >
      Lorem
`;

exports[`props should render size 1`] = `
Snapshot Diff:
- Received styles
+ Base styles

@@ -35,15 +35,15 @@
      "font-weight": "600",
      "height": "auto",
      "justify-content": "center",
      "line-height": "1",
      "margin": "0",
-     "min-height": "var(--wp-g2-control-height-small)",
+     "min-height": "var(--wp-g2-control-height)",
      "outline": "none",
      "padding-bottom": "calc(var(--wp-g2-grid-base) * 1)",
-     "padding-left": "var(--wp-g2-control-padding-x)",
-     "padding-right": "var(--wp-g2-control-padding-x)",
+     "padding-left": "var(--wp-g2-button-padding-x)",
+     "padding-right": "var(--wp-g2-button-padding-x)",
      "padding-top": "calc(var(--wp-g2-grid-base) * 1)",
      "position": "relative",
      "text-align": "center",
      "text-decoration": "none",
      "touch-action": "manipulation",
`;

exports[`props should render suffix 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -14,19 +14,10 @@
      data-g2-component="ButtonContent"
    >
      Lorem
    </span>
    <span
-     class="components-flex-item wp-components-flex-item ic-1p3tlc8 ic-192yz5d css-1dor7w6"
-     data-g2-c16t="true"
-     data-g2-component="ButtonSuffix"
-   >
-     <span>
-       Suffix
-     </span>
-   </span>
-   <span
      aria-hidden="true"
      class="components-elevation wp-components-elevation ic-i1zzlu ic-192yz5d css-8abvx7"
      data-g2-c16t="true"
      data-g2-component="ButtonElevation"
    />
`;

exports[`props should render variant 1`] = `
Snapshot Diff:
- Received styles
+ Base styles

@@ -17,18 +17,18 @@
      "-webkit-justify-content": "center",
      "-webkit-text-decoration": "none",
      "-webkit-user-select": "none",
      "align-items": "center",
      "appearance": "none",
-     "background-color": "var(--wp-g2-button-primary-color)",
-     "border-color": "var(--wp-g2-button-primary-border-color)",
+     "background-color": "var(--wp-g2-button-secondary-color)",
+     "border-color": "var(--wp-g2-button-secondary-border-color)",
      "border-radius": "var(--wp-g2-control-border-radius)",
      "border-style": "solid",
      "border-width": "1px",
      "box-shadow": "0 0 0 var(--wp-g2-control-box-shadow-focus-size) transparent",
      "box-sizing": "border-box",
-     "color": "var(--wp-g2-button-primary-text-color)",
+     "color": "var(--wp-g2-button-secondary-text-color)",
      "cursor": "pointer",
      "display": "inline-flex",
      "flex-direction": "row",
      "font-family": "var(--wp-g2-font-family)",
      "font-size": "var(--wp-g2-font-size)",
`;
